# p9qemu

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: project-status.md
docs/design/: 00-intro.md  01-downloadable-post-install-images.md  02-qemu-diagnostics-and-installation.md  03-windows-whpx-experiments.md  04-automated-installation-answer-files.md  05-multiple-installation-media-releases.md  06-new-release-qualification.md  07-multiple-plan9-vms.md  08-downloadable-multi-vm-labs.md  09-release-candidate-promotion.md  10-ready-image-manifest-and-cache.md  README.md  (+1 more)
images/: .gitattributes  .gitignore  README.md
media/: .gitignore  README.md
src/p9qemu/: __init__.py  (+29 more)
tests/: test_answers.py  test_cli.py  test_drawterm_password_rotation.py  test_drawterm_postinstall.py  test_drawterm_release_candidate.py  test_drawterm_validation.py  test_forwarding.py  test_host.py  test_installer.py  test_instance.py  test_live.py  test_media.py  test_pexpect_drawterm_validation.py  test_provenance.py  test_qemu.py  test_ready_image.py  test_ready_image_acquisition.py  test_ready_image_instance.py  test_release_candidate.py  test_release_preparation.py  test_runtime.py  test_validation.py
tools/: automated_install.py  build_drawterm_release_candidate.py  build_release_candidate.py  generate_ready_image_manifest.py  prepare_drawterm_image.py  prepare_graphical_experiment.py  prepare_release_image.py  run_graphics_serial_experiment.py  validate_drawterm_image.py  validate_drawterm_password_rotation.py  validate_graphical_experiment.py  validate_image.py
(+26 files in other folders)
